# GPS_Brandnew

./: Protokol_vzaimodeystvia_Kunavin.docx  README.md
Lightsout/: Lightsout.sln
Lightsout/App/: Lightsout.ilk  map.html  out.js
Lightsout/Debug/: Lightsout.ilk
Lightsout/Lightsout/: Lightsout.cpp  Lightsout.vcxproj  Lightsout.vcxproj.filters  Visualiser.cpp  Visualiser.h  mapscript.js  out.js  userDB.txt
Lightsout/Lightsout/Debug/: Lightsout.pch  vc141.idb
Lightsout/Lightsout/Debug/Lightsout.tlog/: CL.command.1.tlog  (+6 more)
MVC_GPS_Client/: MVC_GPS_Client.sln
MVC_GPS_Client/Client/: MVC_GPS_Client.ilk  history.txt  login.json
MVC_GPS_Client/Debug/: MVC_GPS_Client.ilk  temp.json
MVC_GPS_Client/MVC_GPS_Client/: CMakeLists.txt  ClientController.cpp  ClientController.h  ClientView.cpp  ClientView.h  DataModel.cpp  DataModel.h  Locks.h  MVC_GPS_Client.cpp  MVC_GPS_Client.vcxproj  MVC_GPS_Client.vcxproj.filters  NMEAModel.cpp  NMEAModel.h  RMC_Parser.cpp  RMC_Parser.h  history.txt  service.json  temp.json
MVC_GPS_Client/MVC_GPS_Client/Debug/: MVC_GPS_Client.pch  vc141.idb
MVC_GPS_Client/MVC_GPS_Client/Debug/MVC_GPS_Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MVC_GPS_Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MVC_GPS_Server/: MVC_GPS_Server.sln
MVC_GPS_Server/Debug/: MVC_GPS_Server.ilk  logusers.txt
MVC_GPS_Server/MVC_GPS_Server/: MVC_GPS_Server.cpp  MVC_GPS_Server.vcxproj  MVC_GPS_Server.vcxproj.filters  datamodel.cpp  datamodel.h  log.cpp  log.h  logadmins.txt  send.json  servcontroller.cpp  servcontroller.h  serverview.cpp  serverview.h  temp.json  userDB.txt
MVC_GPS_Server/MVC_GPS_Server/Debug/: MVC_GPS_Server.pch  vc141.idb
MVC_GPS_Server/Server/: temp.json  userDB.txt
MVX_GPS_Server/: MVX_GPS_Server.sln
MVX_GPS_Server/Debug/: MVX_GPS_Server.ilk
MVX_GPS_Server/MVX_GPS_Server/: JSONparser.cpp  MVX_GPS_Server.cpp  MVX_GPS_Server.vcxproj  MVX_GPS_Server.vcxproj.filters  datamodel.cpp  datamodel.h  servcontroller.cpp  servcontroller.h  serverview.cpp  serverview.h  userDB.txt
MVX_GPS_Server/MVX_GPS_Server/Debug/: MVX_GPS_Server.pch  vc141.idb
ParserTest/: ParserTest.sln
ParserTest/Debug/: ParserTest.exp  ParserTest.ilk  ParserTest.lib
ParserTest/ParserTest/: LibRMCParser.lib  ParserTest.vcxproj  stdafx.cpp  unittest1.cpp
ParserTest/ParserTest/Debug/: vc141.idb
(+25 files in other folders)
